--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,13 @@
 body {
   margin: 0;
 }
+@font-face {
+  font-family: 'Uni Sans Heavy Italic';
+  src: url("../fonts/uni_sans/uni_sans_heavy_italic.eot");
+  src: url("../fonts/uni_sans/uni_sans_heavy_italic.eot?#iefix") format('embedded-opentype'), url("../fonts/uni_sans/uni_sans_heavy_italic.woff") format('woff'), url("../fonts/uni_sans/uni_sans_heavy_italic.ttf") format('truetype'), url("../fonts/uni_sans/uni_sans_heavy_italic.svg#uni_sans_heavy_italic") format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
 .container {
   max-width: 1024px;
   margin: 0 auto;
@@ -20,7 +27,7 @@ body {
   padding: 1em;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: bold;
+  font: bold italic 1.5em 'Uni Sans Heavy Italic', sans-serif;
   color: inherit;
 }
 .logo {
