Nav font update, logo fix

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -15,6 +15,16 @@ body
     font-weight normal
     font-style italic
 
+@font-face
+    font-family 'Uni Sans Thin Italic'
+    src url('../fonts/uni_sans_thin/uni_sans_thin_italic.eot')
+    src url('../fonts/uni_sans_thin/uni_sans_thin_italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/uni_sans_thin/uni_sans_thin_italic.woff') format('woff'),
+        url('../fonts/uni_sans_thin/uni_sans_thin_italic.ttf') format('truetype'),
+        url('../fonts/uni_sans_thin/uni_sans_thin_italic.svg#uni_sans_heavy_italic') format('svg')
+    font-weight normal
+    font-style italic
+
 
 // CONTENT
 
@@ -36,7 +46,7 @@ body
         padding 1em .4em
         text-decoration none
         text-transform uppercase
-        font bold italic 1.5em 'Uni Sans Heavy Italic', sans-serif
+        font italic 1.5em 'Uni Sans Thin Italic', sans-serif
         color inherit
 .logo
     max-width 240px
