--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,13 @@ body {
   font-weight: normal;
   font-style: italic;
 }
+@font-face {
+  font-family: 'Uni Sans Thin Italic';
+  src: url("../fonts/uni_sans_thin/uni_sans_thin_italic.eot");
+  src: url("../fonts/uni_sans_thin/uni_sans_thin_italic.eot?#iefix") format('embedded-opentype'), url("../fonts/uni_sans_thin/uni_sans_thin_italic.woff") format('woff'), url("../fonts/uni_sans_thin/uni_sans_thin_italic.ttf") format('truetype'), url("../fonts/uni_sans_thin/uni_sans_thin_italic.svg#uni_sans_heavy_italic") format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
 .container {
   max-width: 1024px;
   margin: 0 auto;
@@ -30,7 +37,7 @@ body {
   padding: 1em 0.4em;
   text-decoration: none;
   text-transform: uppercase;
-  font: bold italic 1.5em 'Uni Sans Heavy Italic', sans-serif;
+  font: italic 1.5em 'Uni Sans Thin Italic', sans-serif;
   color: inherit;
 }
 .logo {
